add scripted test